# secret-friend-sorter

./: .env.example  .gitignore  Cargo.toml  README.md  friends.example.json
public/: template.html
src/: error.rs  lib.rs  main.rs  prelude.rs
src/utils/: mail_sender.rs  mod.rs  person.rs  sorter.rs
