[package]
name = "secret-frient-sorter"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
lettre = "0.11.11"
lettre_email = "0.9.4"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
anyhow = "1"
